After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 622556 - Save some RAM in NotifyTimeout
Save some RAM in NotifyTimeout
Status: RESOLVED FIXED
Product: notification-daemon
Classification: Other
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: William Jon McCann
Depends on:
Blocks:
 
 
Reported: 2010-06-24 02:07 UTC by Bastien Nocera
Modified: 2010-06-24 04:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Save some RAM in NotifyTimeout (977 bytes, patch)
2010-06-24 02:07 UTC, Bastien Nocera
none Details | Review

Description Bastien Nocera 2010-06-24 02:07:48 UTC
As per simple patch
Comment 1 Bastien Nocera 2010-06-24 02:07:50 UTC
Created attachment 164468 [details] [review]
Save some RAM in NotifyTimeout

By using a bit, rather than a byte for gbooleans.
Comment 2 William Jon McCann 2010-06-24 04:08:53 UTC
Pushed.  Thanks.