Save some RAM in NotifyTimeout

By using a bit, rather than a byte for gbooleans.

https://bugzilla.gnome.org/show_bug.cgi?id=622556